[package]
name = "vegas"
version = "0.1.0"
edition = "2021"
description = "A filesystem sandboxing tool using Linux namespaces and overlayfs"
keywords = ["sandbox", "filesystem", "overlayfs", "namespaces", "linux"]
license = "MIT"

[[bin]]
name = "vegas"
path = "src/main.rs"

[[bin]]
name = "vegas-user"
path = "src/bin/vegas-user.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
nix = { version = "0.29", features = ["fs", "mount", "process", "sched", "user"] }
tempfile = "3"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
